Message draft: fix invalid token vertical alignment

--- a/Libadwaita/styles/message-draft.less
+++ b/Libadwaita/styles/message-draft.less
@@ -211,6 +211,7 @@
 			background-color: @button_color;
 			color: @error_color;
 			border-bottom: 2px solid @error_bg_color;
+			margin-bottom: 5px;
 
 			&:hover {
 				box-shadow: none;
